--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ body{
     border: 3px solid black;
     box-shadow: 0px 0px 45px rgb(30, 235, 30);
     padding: 20px;
-    animation: rotar-elemento 2s forwards;
 }
 
 .content{
@@ -50,6 +49,10 @@ body{
     100% {
     transform: rotate(360deg);
     }
+}
+
+h1{
+    animation: rotar-elemento 2s forwards;
 }
 
 .content:hover{
@@ -156,5 +159,4 @@ footer{
     background-color: rgb(70, 65, 70);
     box-shadow: 0px 0px 45px rgb(23, 24, 23);
     text-align: center;
-    animation: rotar-elemento 2s forwards;
 }
